# cmph-cffi

./: .bumpversion.cfg  .gitignore  .travis.yml  AUTHORS.rst  BUG_REPORTS.rst  CMakeLists.txt  CONTRIBUTING.rst  LICENSE  README.md  README.rst  check-and-dump-corefiles.sh  extract-backtrace.sh  setup.py  tox.ini
cmph/: __init__.py  _adapters.py  _utils.py  cmph.c  cmph.h  pyadapter.h
tests/: test_cmph.py  test_utils.py
